force-app/main/default/objects/Basketball_Game_Attendance__c/Basketball_Game_Attendance__c.object-meta.xml
<CustomObject>
    <description>Tracks basketball game attendance records for Contacts, including game location, date, and tickets purchased.</description>
    <label>Basketball Game Attendance</label>
    <nameField>
        <label>Basketball Game Attendance Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Basketball Game Attendances</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>