force-app/main/default/objects/Basketball_Game_Attendance__c/fields/Game_Location__c.field-meta.xml
<CustomField>
    <fullName>Game_Location__c</fullName>
    <label>Game Location</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>