force-app/main/default/objects/Basketball_Game_Attendance__c/fields/Tickets_Purchased__c.field-meta.xml
<CustomField>
    <fullName>Tickets_Purchased__c</fullName>
    <label>Tickets Purchased</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>